objects/Live_Agent_Org_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom is used to hold the org details(org id, url&apos;s etc)</description>
    <fields>
        <fullName>AdditionalInfo__c</fullName>
        <label>AdditionalInfo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_OutboundChat__c</fullName>
        <label>Case OutboundChatTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_OutboundChat__c</fullName>
        <label>Contact OutboundChatTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Button__c</fullName>
        <label>Default Button</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeploymentID__c</fullName>
        <label>DeploymentID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeploymentURL__c</fullName>
        <label>DeploymentURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Chat_Button__c</fullName>
        <label>Direct Chat Button</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Chat_URL__c</fullName>
        <label>Direct Chat URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Agent_API_Endpoint__c</fullName>
        <label>Live Agent API Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <label>OrgID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TE_URL__c</fullName>
        <label>TE URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>epdURl__c</fullName>
        <label>epdURl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>initURL__c</fullName>
        <label>initURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trackingUrl__c</fullName>
        <description>Adobe Track URL for Live Chat</description>
        <inlineHelpText>Adobe Track URL for Live Chat</inlineHelpText>
        <label>trackingUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Live Agent Org Settings</label>
</CustomObject>